--- a/ecommerce-admin/app/globals.css
+++ b/ecommerce-admin/app/globals.css
@@ -17,12 +17,14 @@ body,
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+
+/* dark theme */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
