data table setup

--- a/ecommerce-admin/app/globals.css
+++ b/ecommerce-admin/app/globals.css
@@ -3,28 +3,29 @@
 @tailwind utilities;
 
 
-/* add this */
+/* added this */
 html,
 body,
 :root{
   height: 100%;
 }
 
-/* add this */
+/* added this */
 
-:root {
+
+/* dark theme */
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
-
-/* dark theme */
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
+}
 
 body {
   color: var(--foreground);
@@ -36,7 +37,7 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
 
 @layer base {
   :root {
